--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,14 +1,7 @@
 html,
 body,
-header,
-#intro {
+header{
   height: 100%;
 }
 
-#intro {
-  background: url("/assets/bg.jpg")no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+
